public/stylesheets/application.css
@import url(http://fonts.googleapis.com/css?family=Sansita+One);
@import url(http://fonts.googleapis.com/css?family=Andada);

body {
  background-color: #66CC33;

  width: 600px;
  margin: auto;
  font-family: sans-serif;
  color: #262626;
}

a {
  color: #666666;
  text-decoration: none;
}

header {
  padding: 0 1em;
}

header > h1 {
  margin-bottom: -0.2em;
  padding:0;
  font-family: 'Sansita One', cursive;
  font-size: 48px;
  text-shadow: 1px 1px #fff, -1px -1px #333;
}

header > h1 > a {
  color: #455545;
}

header > h1 + p {
  margin:0;
  padding: 0 0 0 0.5em;
  font-size:12px;
}

article h1 {
  font-size: 2em;
}

article h2 {
  font-size: 1em;
  font-weight:normal;
}

h1,h2,h3,h4,h5,h6 {
  margin:0;
  padding:0;
}

h1 {
  font-family: 'Andada', sans-serif;
  font-weight: normal;
}

#app {
  margin: 1em 0 0 0;
  padding: 2em 0;
  padding-bottom:0;
  background-color: #EEE;
  
  border: 0.5em solid #262626;
  border-radius: 1em;
}

#app > article, #app > div, #app > form {
  padding: 1em 1em 0 1em;
}

#time_entries {
  padding: 0 !important;
  background-color: #E6E6E6;

  border-radius: 0 0 1em 1em;
}

#time_entries > .time_entry {
  margin-top:1em;
  padding:0.25em 1em;
  border-top: 1px solid #ccc;
  background: -webkit-gradient(linear, left top, left bottom, from(#d6d6d6), color-stop(10%, #e0e0e0), to(#e6e6e6));
  
}

#time_entries > .time_entry form{
  padding:0;
  left: 1em;
  bottom: 0.25em;
  float:right;
  position: relative;
}

#time_entries > .time_entry form input[type="submit"]{
  margin: 0;
  margin-top: -1px;
  padding:0.5em 1em;
  
  cursor: pointer;
  
  border:none;
  background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e6), color-stop(85%,#e6e6e6),color-stop(85%,#ccc), to(#ccc));

  border: 1px solid #ccc;
  border-top:none;
}

#time_entries > .time_entry form input[type="submit"][disabled]{
  cursor: default;
}

#time_entries > .time_entry form input[type="submit"][value="start"]{
  background-color: #6c3;
  background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e6), color-stop(85%,#e6e6e6),color-stop(85%,#6c3), to(#6c3));
}

#time_entries > .time_entry form input[type="submit"][value="stop"]{
  background-color: #C00;
  background: -webkit-gradient(linear, left top, left bottom, from(#e6e6e6), color-stop(85%,#e6e6e6),color-stop(85%,#c00), to(#C00));
}

#time_entries > .time_entry:first-child form input[type="submit"]{
  background: -webkit-gradient(linear, left top, left bottom, from(#eee), color-stop(85%,#eee),color-stop(85%,#ccc), to(#ccc));
}

#user_navigation {
  padding: 0.5em;
  background-color: #f6f6f6;
  color: #999;

  font-size: 14px;
  
  border: 1px solid #fff;
  border-right:none;
  border-top:none;
  border-radius: 0 0.4em 0 .25em;

  float:right;
  position:relative;
  bottom: 2.3em;
  left: 1.2em;
}

#user_navigation > a {
  padding:0;
  color: #999;
}

.time_entry {
  padding: 0 1em;
}

.notice, .alert, .error {
  margin: 1em 0 0 0;
  padding: 1em 1em 0.75em 1em;

  padding-left: 2.5em;
  background-color: #262626;
  background-repeat: no-repeat;
  background-position: 1em 50%;

  color: #E6E6E6;

  border-radius: 1em;
}

.notice {
  background-image: url('/images/notice_16.png');
}

.alert, .error {
  background-image: url('/images/alert_16.png');
}

